# heyatlas

./: .env.example  .gitignore  .pre-commit-config.yaml  .secretsignore  AGENTS.md  Agents.md  README.md  heyatlas.code-workspace  justfile  nirmanus.code-workspace  package.json  pnpm-lock.yaml  pyproject.toml  unsolved_mysteries (1).docx
agent-rooms-server/: package-lock.json  partykit.json  pnpm-lock.yaml
agno-agent/: .env.example  .gitignore  README.md  agent_main.py  agno_client.py  build.sh  main.py  mcp_config.py  pyproject.toml  websocket_server.py
agno-agent/.serena/: project.yml
agno-agent/.serena/memories/: fibonacci_program_task.md  fibonacci_task_completion.md  search_results_indian_ministers_2024.md  user_preferences_task_history.md  user_task_patterns.md
ai-gateway/: README.md  fly.toml
atlas/: .dev.vars  .dev.vars.example  .gitignore  package.json  pnpm-lock.yaml  wrangler.toml
bifrost-gateway/: fly.toml
cli/: CLIAgentBridge.ts  LICENSE  README.md  auth.ts  christmas-card.html  christmas-greetings.html  cli.ts  happy-new-year-dancing.html  happy-new-year.html  happy_new_year_2026.html  index.ts  new-year-card.html  new-year-dancing-card.html  new_year_card.html  package.json  pnpm-lock.yaml  test-acp-goose.ts  test-acp.ts  test-toad-events.ts  test-warp-completion.ts  test-warp-events.ts
desktop-sandbox/cloudflare/files/agent-smith-py/: main.py  pyproject.toml
desktop-sandbox/cloudflare/files/agent-smith-py/src/: __init__.py  callbacks.py  config.py  prompts.py  workforce.py
desktop-sandbox/cloudflare/files/agent-smith-py/src/agents/: __init__.py  browser.py  pptx.py  research.py
docs/: TOAD_INTEGRATION_PLAN.md
mcp-ui-server/: .gitignore  wrangler.toml
opencode-agent/: README.md  index.ts  package.json
reports/: transcript_mock_room_20251209_151352.json  transcript_mock_room_20251209_151838.json  (+1 more)
voice-agent/: .env.example  .gitignore  Dockerfile  agent_factory.py  agno_client.py  claude_client.py  fly.toml  goose_client.py  inspect_memori.py  livekit.toml  main.py  main_test.py  pyproject.toml
voice-agent/.shai/sessions/: 05c22297-630d-404c-804c-2dc3569fe2b3.json
voice-agent/assistants/: __init__.py  chunin.py  container.py  context.py  genin.py  jonin.py  registry.py
voice-agent/backend_agents/: __init__.py  agent_interface.py  remote_tunnel.py  tunnel_interface.py
voice-agent/backend_agents/agno/: agno_client.py
voice-agent/backend_agents/claude/: claude_client.py
voice-agent/backend_agents/goose/: goose.config.yaml  goose_client.py
voice-agent/backend_agents/opencode/: opencode_client.py
voice-agent/computer_use/: README.md  __init__.py  e2b_provider.py  interface.py
voice-agent/experimental/: __init__.py  console_test.py  genin_local.py  voltagent_llm.py
voice-agent/tunnel/: __init__.py  atlas_tunnel.py
voice-agent/utils/: __init__.py  instructions.py  metadata.py  user.py
(+366 files in other folders)
